--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         target:
           - arm
+          - riscv
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
