--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -15,24 +15,24 @@ jobs:
     strategy:
       matrix:
         target:
-          - aarch64
+          #- aarch64
           - arm
-          - bfin
-          - i386
-          - lm32
-          - m68k
-          - microblaze
-          - mips
-          - moxie
-          - nios2
-          - or1k
-          - powerpc
-          - riscv
-          - sh
-          - sparc
-          - sparc64
-          - v850
-          - x86_64
+          #- bfin
+          #- i386
+          #- lm32
+          #- m68k
+          #- microblaze
+          #- mips
+          #- moxie
+          #- nios2
+          #- or1k
+          #- powerpc
+          #- riscv
+          #- sh
+          #- sparc
+          #- sparc64
+          #- v850
+          #- x86_64
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -67,4 +67,3 @@ jobs:
         with:
           name: rsb-${{ matrix.target }}
           path: rtems/tar/*.tar*
-          retention-days: 2
