Use a toolchain that builds faster

--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -16,8 +16,8 @@ jobs:
       matrix:
         target:
           #- aarch64
-          - arm
-          #- bfin
+          #- arm
+          - bfin
           #- i386
           #- lm32
           #- m68k
