--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: rsb
-          key: ${{ runner.os }}-${{ hashFiles('rsb/**/*') }}
+          key: ${{ runner.os }}-${{ hashFiles('rsb/[!.]**/*') }}
       - name: Install dependencies
         run: |
           sudo apt-get update
