--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -21,7 +21,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install \
-            build-essential
+            build-essential \
+            ninja
       - name: Build qemu
         run: |
           cd rsb/rtems
