--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -22,7 +22,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install \
             build-essential \
-            ninja
+            ninja-build
       - name: Build qemu
         run: |
           cd rsb/rtems
