CI: Cache qemu too.

--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -17,6 +17,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: rsb
+      - name: Cache build
+        # This is to avoid rebuilding all tools while testing github actions
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            rsb
+            /opt/rtems
+          key: ${{ runner.os }}-${{ matrix.target }}-${{ hashFiles('rsb/[!.]**/*') }}
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -24,6 +33,7 @@ jobs:
             build-essential \
             ninja-build
       - name: Build qemu
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           cd rsb/rtems
           ../source-builder/sb-set-builder \
