CI: Fix repository.

--- a/.github/workflows/toolchain.yml
+++ b/.github/workflows/toolchain.yml
@@ -162,6 +162,7 @@ jobs:
         with:
           path: rtems
           ref: ci
+          repository: c-mauderer/rtems
       - name: Install dependencies
         run: |
           sudo apt-get update
